# litestar-habittracker

./: .env-docker  .env-test  .env.example  .gitignore  Dockerfile  Dockerfile.migrations  README.md  compose.yml  dev.sh  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 5afb56da91f8_add_habit_dates.py  81d92aac5f8b_add_habit_dates.py  a9acf3d870f9_update_habits.py  e8ab00c77e4a_initial_schema.py  ef391b9017fd_add_habit_dates.py
src/: app.py  app_mcp.py  config.py
src/application/schemas/: auth.py  enums.py  habit.py  responses.py  user.py
src/application/services/: auth.py  errors.py  habit.py  user.py
src/domain/models/: common.py  habit.py  habit_dates.py  user.py
src/domain/repositories/: habit.py  habit_dates.py  token.py  user.py
src/infrastructure/: database.py
src/infrastructure/repositories/: token.py
src/presentation/: dependencies.py  dependencies_mcp.py
src/presentation/auth/: errors.py  middleware.py  schemas.py
src/presentation/controllers/: habit.py  user.py
src/presentation/controllers/mcp/: factory.py
src/presentation/controllers/mcp/habit/: prompts.py  tools.py
src/utils/auth/: password.py  token.py
tests/: conftest.py
tests/e2e/: conftest.py  test_habit.py  test_user.py
tests/e2e/load/: test_habit.py  utils.py
tests/integration/: test_habit.py  test_user.py
tests/integration/validation/: conftest.py
tests/integration/validation/habit/: test_add_new_habit.py  test_update_habit.py
tests/integration/validation/user/: test_auth_user.py
tests/unit/: conftest.py  test_auth.py
tests/unit/habit/: test_add_new_habit.py  test_update_habit.py
tests/unit/user/: test_add_or_get_user.py  test_auth_user.py
tests/unit/utils/: test_auth.py
tests/unit/validation/habit/: test_add_new_habit.py  test_update_habit.py
tests/unit/validation/user/: test_auth_user.py
